--- a/JavaWeb3/src/main/resources/templates/sign_up.html
+++ b/JavaWeb3/src/main/resources/templates/sign_up.html
@@ -22,8 +22,9 @@
 		    <el-input v-model="ruleForm.pwd" show-password></el-input>
 		  </el-form-item>
 		  <el-form-item>
-		    <el-button type="primary" @click="submitForm()">Sign Up</el-button>
-		    <el-button @click="resetForm('ruleForm')">Reset</el-button>
+              <el-button type="primary" @click="submitForm()">Sign Up</el-button>
+              <el-button @click="resetForm('ruleForm')">Reset</el-button>
+              <el-button @click="onSignIn">Sign In</el-button>
 		  </el-form-item>
 		</el-form>
             <div>{{request}}</div>
@@ -74,6 +75,17 @@
             beforeDestroy() {
                 this.websocket.close();
             },
+            watch:{
+                response(newR, oldR) {
+                    this.parsed_response = JSON.parse(newR);
+                    if (this.parsed_response.REPLY === 'REGISTER: SUCCESS') {
+                        alert("Register successfully!");
+                        this.onSignIn();
+                    } else {
+                        alert("Register failed!")
+                    }
+                }
+            },
             methods: {
                 initWebSocket() {
                     //connection occurs error
@@ -117,18 +129,13 @@
 								"picture:\"" + this.ruleForm.picture + "\"\n" +
 								"}";
 						this.send();
-						this.parsed_response = JSON.parse(this.response);
-						alert(this.parsed_response);
-						if (this.parsed_response.REPLY === 'REGISTER: SUCCESS') {
-							alert("Register successfully!");
-							window.location.href = "/sign_in";
-						} else {
-							alert("Register failed!")
-						}
 					} else {
 						alert("Error: " + this.response);
 					}
 				},
+                onSignIn() {
+                    window.location.href = "/sign_in";
+                },
                 resetForm(formName) {
                     this.$refs[formName].resetFields();
                 }
