Fixed bug: double login

--- a/JavaWeb3/src/main/resources/templates/sign_up.html
+++ b/JavaWeb3/src/main/resources/templates/sign_up.html
@@ -134,7 +134,7 @@
 					}
 				},
                 onSignIn() {
-                    window.location.href = "/sign_in";
+                    window.location.href = "/chat";
                 },
                 resetForm(formName) {
                     this.$refs[formName].resetFields();
