--- a/JavaWeb3/src/main/resources/templates/sign_up.html
+++ b/JavaWeb3/src/main/resources/templates/sign_up.html
@@ -21,7 +21,7 @@
 		  <el-form-item label="Password" prop="pwd">
 		    <el-input v-model="ruleForm.pwd" show-password></el-input>
 		  </el-form-item>
-		  <el-form-item>
+		  <el-form-item style="margin-top: 50px;">
               <el-button type="primary" @click="submitForm()">Sign Up</el-button>
               <el-button @click="resetForm('ruleForm')">Reset</el-button>
               <el-button @click="onSignIn">Sign In</el-button>
